// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
<div
  className="{}"
  id="default"
>
  <div
    className=""
  >
    <div
      style={
        Object {
          "border": "1px solid red",
          "padding": 10,
        }
      }
    >
      content
    </div>
  </div>
</div>
`;

exports[`Render properties.offsetBottom - value[0] 1`] = `
<div
  className="{}"
  id="properties.offsetBottom"
>
  <div
    className=""
  >
    <div
      style={
        Object {
          "border": "1px solid red",
          "padding": 10,
        }
      }
    >
      content
    </div>
  </div>
</div>
`;

exports[`Render properties.offsetTop - value[0] 1`] = `
<div
  className="{}"
  id="properties.offsetTop"
>
  <div
    className=""
  >
    <div
      style={
        Object {
          "border": "1px solid red",
          "padding": 10,
        }
      }
    >
      content
    </div>
  </div>
</div>
`;

exports[`Render properties.style - value[0] 1`] = `
<div
  className="{\\"style\\":{\\"border\\":\\"5px solid blue\\"}}"
  id="properties.style"
>
  <div
    className=""
  >
    <div
      style={
        Object {
          "border": "1px solid red",
          "padding": 10,
        }
      }
    >
      content
    </div>
  </div>
</div>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.offsetBottom 1`] = `true`;

exports[`Test Schema properties.offsetBottom 2`] = `null`;

exports[`Test Schema properties.offsetTop 1`] = `true`;

exports[`Test Schema properties.offsetTop 2`] = `null`;

exports[`Test Schema properties.style 1`] = `true`;

exports[`Test Schema properties.style 2`] = `null`;
